--- a/user.html
+++ b/user.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
 
-    <style>
+     <style>
         /* Your base styles here */
             :root {
       --bg-light: #e2dcdc;
@@ -213,6 +213,135 @@
             font-weight: 500;
             color: #4a5568;
         }
+
+        @media (max-width: 900px) {
+  #main-content {
+    margin-left: 0 !important;
+    width: 100vw !important;
+    min-width: 0 !important;
+    box-sizing: border-box;
+    padding: 10px;
+    min-height: unset;
+  }
+  .user-header {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+  }
+  .user-header input[type="text"] {
+    width: 100%;
+    min-width: 0;
+  }
+  .user-header button {
+    width: 100%;
+    margin: 0 0 5px 0;
+  }
+  .modal-content {
+    width: 95vw;
+    min-width: 0;
+    padding: 10px;
+  }
+  table.customer-table th, table.customer-table td {
+    padding: 8px 4px;
+    font-size: 0.95em;
+  }
+}
+
+/* Mobile responsive user card/table styles */
+@media (max-width: 600px) {
+  table.user-table,
+  table.user-table thead,
+  table.user-table tbody,
+  table.user-table th,
+  table.user-table td,
+  table.user-table tr {
+    display: block;
+    width: 100%;
+  }
+  table.user-table thead {
+    display: none;
+  }
+  table.user-table tr {
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    background: var(--card-bg-light);
+    color: var(--text-light);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.04);
+    padding: 8px 0;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    transition: background 0.3s, color 0.3s;
+  }
+  body.dark table.user-table tr {
+    background: var(--card-bg-dark);
+    color: var(--text-dark);
+    border: 1px solid #222;
+  }
+  table.user-table td {
+    border: none;
+    position: relative;
+    padding-left: 50%;
+    min-height: 36px;
+    text-align: left;
+    background: none;
+    white-space: normal;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    max-width: 100%;
+    box-sizing: border-box;
+    color: inherit;
+  }
+  table.user-table td:before {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    width: 45%;
+    white-space: nowrap;
+    font-weight: bold;
+    color: #888;
+    content: attr(data-label);
+  }
+  table.user-table td.actions {
+    padding-left: 8px;
+  }
+}
+
+/* Button color accuracy */
+.user-header button,
+button.save,
+button.cancel {
+  background: #2563eb;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+.user-header button#addCustomerBtn {
+  background: #22c55e;
+}
+.user-header button[onclick*="exportCustomersToExcel"] {
+  background: #2563eb;
+}
+.user-header button[onclick*="exportCustomersToPDF"] {
+  background: #ef4444;
+}
+button.save {
+  background: #2563eb;
+}
+button.cancel {
+  background: #6b7280;
+}
+table.customer-table td.actions button.edit {
+  background: #3b82f6;
+  color: #fff;
+}
+table.customer-table td.actions button.delete {
+  background: #ef4444;
+  color: #fff;
+}
     </style>
 
 </head>
@@ -221,7 +350,7 @@
 
     <script src="components/navbar.js"></script>
     <script src="components/sidebar.js"></script>
-
+    <script src="components/spinner.js"></script>
     <div id="main-content">
         <div class="user-header">
             <input id="searchInput" type="text" placeholder="Search users by name or email..." />
@@ -296,8 +425,10 @@
         </div>
     </div>
     <script src="assets/js/script.js"></script>
-
+    <script src="config.js"></script>
 <script>
+     const API_BASE = window.BASE_URL;
+
     const searchInput = document.getElementById('searchInput');
     searchInput.value = ''; // <-- This ensures the input is empty on load
 
@@ -341,7 +472,7 @@
     }
 
     function fetchWarehouses() {
-        axios.get('http://localhost:5000/warehouse')
+        axios.get(`${API_BASE}/warehouse`)
             .then(res => {
                 warehouses = res.data?.warehouses || [];
                 warehouseSelect.innerHTML = '<option value="">-- None --</option>';
@@ -356,7 +487,7 @@
     }
 
     function fetchUsers() {
-        axios.get('http://localhost:5000/auth/users')
+        axios.get(`${API_BASE}/auth/users`)
             .then(res => {
                 users = res.data || [];
                 renderUsers();
@@ -392,12 +523,12 @@
         paginatedUsers.forEach(user => {
             const tr = document.createElement('tr');
             tr.innerHTML = `
-                <td>${user.firstName || ''}</td>
-                <td>${user.lastName || ''}</td>
-                <td>${user.email || ''}</td>
-                <td>${user.role || ''}</td>
-                <td>${user.warehouse || '-'}</td>
-                <td class="actions">
+                <td data-label="First Name">${user.firstName || ''}</td>
+                <td data-label="Last Name">${user.lastName || ''}</td>
+                <td data-label="Email">${user.email || ''}</td>
+                <td data-label="Role">${user.role || ''}</td>
+                <td data-label="Warehouse">${user.warehouse || '-'}</td>
+                <td data-label="Actions" class="actions">
                     ${isAdmin ? `
                         <button class="edit">Edit</button>
                         <button class="delete">Delete</button>
@@ -480,8 +611,8 @@
         if (password) data.password = password;
 
         const request = editingUserId
-            ? axios.put(`http://localhost:5000/auth/user/${editingUserId}`, data)
-            : axios.post('http://localhost:5000/auth/user', data);
+            ? axios.put(`${API_BASE}/auth/user/${editingUserId}`, data)
+            : axios.post(`${API_BASE}/auth/user`, data);
 
         request.then(() => {
             alert(editingUserId ? 'User updated' : 'User added');
@@ -492,7 +623,7 @@
 
     function deleteUser(id) {
         if (!confirm('Are you sure you want to delete this user?')) return;
-        axios.delete(`http://localhost:5000/auth/user/${id}`)
+        axios.delete(`${API_BASE}/auth/user/${id}`)
             .then(() => {
                 alert('User deleted');
                 fetchUsers();
