--- a/product.html
+++ b/product.html
@@ -405,18 +405,19 @@ input, select {
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <script src="config.js"></script>
 
 
 
     <script>
+        const API_BASE = window.BASE_URL;
         new Vue({
             el: '#app',
             data: {
 
                 isDarkMode: localStorage.getItem("darkMode") === "true",
                 searchTerm: '',
-                API_BASE: 'http://localhost:5000',
+                API_BASE: API_BASE,
                 productVariants: [],
                 products: [],
                 warehouses: [],
