--- a/stats.html
+++ b/stats.html
@@ -5,25 +5,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Boxicons CSS -->
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <title>Eraskon Inventory Management</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-</head>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Bootstrap 5 -->
+  </head>
 
 <body>
- <!-- Load Navbar -->
+  <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
   <!-- Load Sidebar -->
   <script src="components/sidebar.js"></script>
-    
-  <!-- Main Content -->
+
   <main id="app" class="main-content">
+    <div style="margin-bottom: 1em;">
+      <label for="warehouseSelect"><strong>Warehouse:</strong></label>
+      <select id="warehouseSelect" v-model="selectedWarehouseId" @change="onWarehouseChange">
+        <option value="">All Warehouses</option>
+        <option v-for="w in warehouses" :key="w._id" :value="w._id">
+          {{ w.name }} ({{ w.location }})
+        </option>
+      </select>
+      <span v-if="selectedWarehouse">
+        <br>
+        <strong>Location:</strong> {{ selectedWarehouse.location }}<br>
+        <strong>Stock:</strong> {{ selectedWarehouse.stock || selectedWarehouse.totalStock || 0 }}
+      </span>
+    </div>
+
     <div class="cards">
       <div class="card" v-for="card in cards" :key="card.title">
         <h3>{{ card.title }}</h3>
@@ -31,11 +46,9 @@
       </div>
     </div>
 
-
     <div class="chart-row" style="display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 20px;">
       <div class="chart-container"
-        style=" flex: 1; min-width: 300px;padding: 16px;background-color: var(--container-bg);border-radius: 10px;transition: background 0.3s, color 0.3s;">
-
+        style="flex: 1; min-width: 300px; padding: 16px; background-color: var(--container-bg); border-radius: 10px;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
           <h4 style="margin: 0;">Sales Chart</h4>
           <div>
@@ -50,17 +63,32 @@
       </div>
 
       <div class="chart-container"
-        style=" flex: 1; min-width: 300px;padding: 16px;background-color: var(--container-bg);border-radius: 10px;transition: background 0.3s, color 0.3s;">
+        style="flex: 1; min-width: 300px; padding: 16px; background-color: var(--container-bg); border-radius: 10px;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
           <h4 style="margin: 0;">Product Stock</h4>
           <button @click="downloadChart('productChart', 'Product_Stock.png')">Download</button>
         </div>
         <canvas id="productChart"></canvas>
       </div>
+
+      <div class="chart-container"
+        style="flex: 1; min-width: 300px; padding: 16px; background-color: var(--container-bg); border-radius: 10px;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+          <h4 style="margin: 0;">Product Sales Distribution</h4>
+          <button @click="downloadChart('salesPieChart', 'Product_Sales_Pie.png')">Download</button>
+        </div>
+        <canvas id="salesPieChart"></canvas>
+      </div>
+
+      <div class="chart-container"
+        style="flex: 1; min-width: 300px; padding: 16px; background-color: var(--container-bg); border-radius: 10px;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+          <h4 style="margin: 0;">Warehouse Stock Distribution</h4>
+          <button @click="downloadChart('stockPieChart', 'Warehouse_Stock_Pie.png')">Download</button>
+        </div>
+        <canvas id="stockPieChart"></canvas>
+      </div>
     </div>
-
-
-
 
     <div class="table-section">
       <input type="text" v-model="search" placeholder="Search products..." class="table-search" />
@@ -69,28 +97,43 @@
           <tr>
             <th @click="sort('name')">Name</th>
             <th @click="sort('category')">Category</th>
+            <th>Description</th>
+            <th>SKU</th>
+            <th>Barcode</th>
+            <th>Batch Tracking</th>
             <th @click="sort('stock')">Stock</th>
+            <th>Total Stock</th>
           </tr>
         </thead>
         <tbody>
           <tr v-for="product in filteredProducts" :key="product.id">
             <td>{{ product.name }}</td>
-            <td>{{ product.category }}</td>
-            <td>{{ product.stock }}</td>
+            <td>
+              {{ typeof product.category === 'object' ? product.category.name : product.category }}
+            </td>
+            <td>{{ product.description }}</td>
+            <td>{{ product.sku }}</td>
+            <td>{{ product.barcode }}</td>
+            <td>{{ product.batchTracking ? 'Yes' : 'No' }}</td>
+            <td>
+              {{
+                (product.warehouses || []).find(w => w.warehouse === selectedWarehouseId)?.stock
+                ?? product.totalStock
+                ?? product.stock
+                ?? 0
+              }}
+            </td>
+            <td>{{ product.totalStock ?? product.stock ?? 0 }}</td>
           </tr>
         </tbody>
       </table>
     </div>
   </main>
- 
-  <!-- JavaScript -->
+
   <script src="assets/js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
- <script src="config.js"></script>
-
-
+  <script src="config.js"></script>
   <script>
-     const API_BASE = window.BASE_URL;
+    const API_BASE = window.BASE_URL;
 
     function toggleSidebar() {
       document.body.classList.toggle('collapsed');
@@ -99,10 +142,13 @@
     new Vue({
       el: '#app',
       data: {
+        warehouses: [],
+        selectedWarehouseId: '',
         cards: [
           { title: 'Total Products', value: 0 },
           { title: 'Total Sales', value: 0 },
-          { title: 'Available Stock', value: 0 }
+          { title: 'Available Stock', value: 0 },
+          { title: 'Total Amount', value: 0 }
         ],
         search: '',
         sortKey: '',
@@ -112,16 +158,29 @@
         orders: [],
         salesChart: null,
         productChart: null,
-        salesData: {}
+        salesData: {},
+        stockPieChart: null,
+        salesPieChart: null
       },
       computed: {
         availableMonths() {
           return Object.keys(this.salesData);
         },
+        selectedWarehouse() {
+          return this.warehouses.find(w => w._id === this.selectedWarehouseId) || null;
+        },
         filteredProducts() {
-          let list = this.products.filter(p =>
-            p.name.toLowerCase().includes(this.search.toLowerCase())
-          );
+          let list = this.products;
+          if (this.selectedWarehouseId) {
+            list = list.filter(p =>
+              (p.warehouses || []).some(w => w.warehouse === this.selectedWarehouseId)
+            );
+          }
+          if (this.search) {
+            list = list.filter(p =>
+              p.name.toLowerCase().includes(this.search.toLowerCase())
+            );
+          }
           if (this.sortKey) {
             list.sort((a, b) => {
               const result = a[this.sortKey] > b[this.sortKey] ? 1 : -1;
@@ -156,6 +215,12 @@
         async fetchData() {
           try {
             const token = localStorage.getItem('token');
+            // Fetch warehouses
+            const warehouseRes = await fetch(`${API_BASE}/warehouse`, {
+              headers: { Authorization: `Bearer ${token}` }
+            });
+            const warehouseData = await warehouseRes.json();
+            this.warehouses = Array.isArray(warehouseData) ? warehouseData : (warehouseData.warehouses || []);
             // Fetch products
             const prodRes = await fetch(`${API_BASE}/products`, {
               headers: { Authorization: `Bearer ${token}` }
@@ -168,18 +233,7 @@
             });
             const orderData = await orderRes.json();
             this.orders = Array.isArray(orderData) ? orderData : (orderData.orders || []);
-            // Update cards
-            let totalAmount = 0;
-            if (this.orders.length) {
-              totalAmount = this.orders.reduce((sum, o) => sum + (Number(o.total) || 0), 0);
-            }
-            this.cards = [
-              { title: 'Total Products', value: this.products.length },
-              { title: 'Total Sales', value: this.orders.length },
-              { title: 'Available Stock', value: this.products.reduce((sum, p) => sum + (p.stock || 0), 0) },
-              { title: 'Total Amount', value: `₦${totalAmount.toLocaleString()}` }
-            ];
-            // Prepare salesData for chart
+            this.updateCards();
             this.prepareSalesData();
             this.drawChart();
           } catch (err) {
@@ -187,13 +241,19 @@
           }
         },
         prepareSalesData() {
-          // Example: group orders by month for salesData
           const salesData = {};
-          this.orders.forEach(order => {
+          let orders = this.orders;
+          if (this.selectedWarehouseId) {
+            orders = orders.filter(order =>
+              order.items && order.items.some(item =>
+                (item.warehouse === this.selectedWarehouseId)
+              )
+            );
+          }
+          orders.forEach(order => {
             const date = new Date(order.createdAt);
             const month = date.toLocaleString('default', { month: 'short' });
             if (!salesData[month]) salesData[month] = [0, 0];
-            // Example: order.channel === 'online' or 'offline'
             if (order.channel === 'online') salesData[month][0] += 1;
             else salesData[month][1] += 1;
           });
@@ -283,14 +343,25 @@
             plugins: [ChartDataLabels]
           });
 
-          // Product chart (bar chart)
+          // Product chart (bar chart) - show stock for selected warehouse
+          let chartProducts = this.products;
+          let chartStocks = this.products.map(p => p.stock || 0);
+          if (this.selectedWarehouseId) {
+            chartProducts = this.products.filter(p =>
+              (p.warehouses || []).some(w => w.warehouse === this.selectedWarehouseId)
+            );
+            chartStocks = chartProducts.map(p => {
+              const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
+              return wh ? wh.stock : 0;
+            });
+          }
           this.productChart = new Chart(ctxProduct, {
             type: "bar",
             data: {
-              labels: this.products.map(p => p.name),
+              labels: chartProducts.map(p => p.name),
               datasets: [{
                 label: "Stock Level",
-                data: this.products.map(p => p.stock),
+                data: chartStocks,
                 backgroundColor: barColor,
                 borderRadius: 6,
                 borderSkipped: false
@@ -328,6 +399,169 @@
             },
             plugins: [ChartDataLabels]
           });
+
+          // Destroy old pie charts if they exist
+          if (this.salesPieChart) this.salesPieChart.destroy();
+          if (this.stockPieChart) this.stockPieChart.destroy();
+
+          const ctxSalesPie = document.getElementById("salesPieChart").getContext("2d");
+          const ctxStockPie = document.getElementById("stockPieChart").getContext("2d");
+
+          // Product Sales Pie Chart
+          const salesDataArr = this.getProductSalesData();
+          this.salesPieChart = new Chart(ctxSalesPie, {
+            type: "pie",
+            data: {
+              labels: salesDataArr.map(s => s.name),
+              datasets: [{
+                data: salesDataArr.map(s => s.count),
+                backgroundColor: salesDataArr.map((_, i) =>
+                  `hsl(${i * 360 / salesDataArr.length}, 70%, 60%)`
+                )
+              }]
+            },
+            options: {
+              responsive: true,
+              plugins: {
+                legend: { labels: { color: this.getTextColor() } },
+                datalabels: {
+                  color: this.getTextColor(),
+                  font: { weight: 'bold' },
+                  formatter: Math.round
+                }
+              }
+            },
+            plugins: [ChartDataLabels]
+          });
+
+          // Warehouse Stock Pie Chart
+          const stockDataArr = this.getWarehouseStockData();
+          this.stockPieChart = new Chart(ctxStockPie, {
+            type: "pie",
+            data: {
+              labels: stockDataArr.map(s => s.name),
+              datasets: [{
+                data: stockDataArr.map(s => s.stock),
+                backgroundColor: stockDataArr.map((_, i) =>
+                  `hsl(${i * 360 / stockDataArr.length}, 70%, 60%)`
+                )
+              }]
+            },
+            options: {
+              responsive: true,
+              plugins: {
+                legend: { labels: { color: this.getTextColor() } },
+                datalabels: {
+                  color: this.getTextColor(),
+                  font: { weight: 'bold' },
+                  formatter: Math.round
+                }
+              }
+            },
+            plugins: [ChartDataLabels]
+          });
+        },
+        updateCards() {
+          if (this.selectedWarehouseId) {
+            // Aggregate order data for the selected warehouse
+            let productSet = new Set();
+            let totalAmount = 0;
+            let orderCount = 0;
+
+            this.orders.forEach(order => {
+              let orderHasWarehouse = false;
+              let orderAmount = 0;
+              if (order.items && Array.isArray(order.items)) {
+                order.items.forEach(item => {
+                  if (item.warehouse === this.selectedWarehouseId) {
+                    productSet.add(item.productVariantId || item.product || item.sku || item.name);
+                    orderAmount += Number(item.price) * (Number(item.quantity) || 1) || 0;
+                    orderHasWarehouse = true;
+                  }
+                });
+              }
+              if (orderHasWarehouse) {
+                orderCount += 1;
+                totalAmount += orderAmount || Number(order.total) || 0;
+              }
+            });
+
+            // Available stock for this warehouse
+            let warehouseStock = 0;
+            this.products.forEach(p => {
+              const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
+              warehouseStock += wh ? (wh.stock || 0) : 0;
+            });
+
+            this.cards = [
+              { title: 'Total Products', value: productSet.size },
+              { title: 'Total Sales', value: orderCount },
+              { title: 'Available Stock', value: warehouseStock },
+              { title: 'Total Amount', value: `₦${totalAmount.toLocaleString()}` }
+            ];
+          } else {
+            // All warehouses (default)
+            let productSet = new Set();
+            let totalAmount = 0;
+            let orderCount = this.orders.length;
+
+            this.orders.forEach(order => {
+              if (order.items && Array.isArray(order.items)) {
+                order.items.forEach(item => {
+                  productSet.add(item.productVariantId || item.product || item.sku || item.name);
+                  totalAmount += Number(item.price) * (Number(item.quantity) || 1) || 0;
+                });
+              }
+              totalAmount += Number(order.total) || 0;
+            });
+
+            // Available stock for all warehouses
+            let allStock = this.products.reduce((sum, p) => sum + (p.stock || 0), 0);
+
+            this.cards = [
+              { title: 'Total Products', value: productSet.size },
+              { title: 'Total Sales', value: orderCount },
+              { title: 'Available Stock', value: allStock },
+              { title: 'Total Amount', value: `₦${totalAmount.toLocaleString()}` }
+            ];
+          }
+        },
+        onWarehouseChange() {
+          this.prepareSalesData();
+          this.drawChart();
+          this.updateCards();
+        },
+        getProductSalesData() {
+          // Returns [{ name, count }]
+          const stats = {};
+          this.orders.forEach(order => {
+            if (!order.items) return;
+            order.items.forEach(item => {
+              if (!this.selectedWarehouseId || item.warehouse === this.selectedWarehouseId) {
+                const key = item.name || item.productVariantId || item.product || item.sku;
+                if (!stats[key]) stats[key] = { name: item.name, count: 0 };
+                stats[key].count += Number(item.quantity) || 1;
+              }
+            });
+          });
+          return Object.values(stats);
+        },
+        getWarehouseStockData() {
+          // Returns [{ name, stock }]
+          let products = this.products;
+          if (this.selectedWarehouseId) {
+            products = products.filter(p =>
+              (p.warehouses || []).some(w => w.warehouse === this.selectedWarehouseId)
+            );
+          }
+          return products.map(p => {
+            let stock = p.stock || 0;
+            if (this.selectedWarehouseId) {
+              const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
+              stock = wh ? wh.stock : 0;
+            }
+            return { name: p.name, stock };
+          });
         }
       },
       mounted() {
@@ -337,11 +571,6 @@
       }
     });
   </script>
-  
-
-
-
-
 </body>
 
 </html>
